libs/extractor/src/snapshots/extractor__tests__stylex_import_unknown_named.snap
---
source: libs/extractor/src/lib.rs
expression: "extract(\"test.tsx\",\nr\"import { create, unknownFunction } from '@stylexjs/stylex';\nconst styles = create({ base: { color: 'red' } });\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).expect_err(\"unadvertised StyleX value exports must be located errors\").to_string()"
---
"test.tsx:1:18: `StyleX API()` cannot use `unknownFunction` at build time: use an advertised value export; compat/stylex is types-only and the dedicated subpath has no default"
