libs/extractor/src/snapshots/extractor__tests__stylex_include_dynamic_target.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst base = stylex.create({ dynamic: (x) => ({ color: x, fontSize: '14px' }) });\nconst composed = stylex.create({ fancy: { ...stylex.include(base.dynamic), backgroundColor: 'blue' } });\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background-color",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "font-size",
                value: "14px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "color",
                level: 0,
                identifier: "x",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport stylex from \"@stylexjs/stylex\";\nconst base = { \"dynamic\": \"OLfont_dsize-v14px OHbwyjstrs_m7i31yn\" };\nconst composed = { \"fancy\": \"OLfont_dsize-v14px OHbwyjstrs_m7i31yn OHc17k7qhkrpaxcbyp\" };\n",
}
