libs/extractor/src/snapshots/extractor__tests__stylex_include_named_import.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import { create, include } from '@stylexjs/stylex';\nconst base = create({\n    root: { color: 'red' },\n});\nconst composed = create({\n    fancy: { ...include(base.root), padding: '8px' },\n});\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "padding",
                value: "8px",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nimport { create, include } from \"@stylexjs/stylex\";\nconst base = { \"root\": \"OLcolor-vred\" };\nconst composed = { \"fancy\": \"OLcolor-vred OLpadding-v8px\" };\n",
}
