libs/extractor/src/snapshots/extractor__tests__stylex_include_with_props.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.tsx\",\nr\"import stylex from '@stylexjs/stylex';\nconst base = stylex.create({\n    root: { color: 'red' },\n});\nconst composed = stylex.create({\n    fancy: { ...stylex.include(base.root), backgroundColor: 'blue' },\n});\nconst el = <div {...stylex.props(composed.fancy)} />;\",\nExtractOption\n{\n    package: \"@devup-ui/react\".to_string(), css_dir:\n    \"@devup-ui/react\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n},).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background-color",
                value: "blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "color",
                value: "red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/react/devup-ui.css\";\nconst base = { \"root\": \"a\" };\nconst composed = { \"fancy\": \"a b\" };\nconst el = <div {...{ className: \"a b\" }} />;\n",
}
